objects/Customer_Revenue__c/Customer_Revenue__c.object-meta.xml
<CustomObject>
    <label>Customer Revenue</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>