objects/Customer_Revenue__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Customer Revenues (Account Executive)</relationshipLabel>
    <relationshipName>Customer_Revenues1</relationshipName>
    <type>Lookup</type>
</CustomField>