objects/Customer_Revenue__c/fields/Last_18_Months__c.field-meta.xml
<CustomField>
    <fullName>Last_18_Months__c</fullName>
    <formula>IF(Period_Start_Date__c &gt;= ADDMONTHS(today(),-18)  ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 18 Months</label>
    <type>Checkbox</type>
</CustomField>