objects/Customer_Revenue__c/fields/Last_18_Months_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_18_Months_Date__c</fullName>
    <formula>ADDMONTHS(today(),18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 18 Months Date</label>
    <type>Date</type>
</CustomField>