objects/Customer_Revenue__c/fields/Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months__c</fullName>
    <formula>(MONTH(Period_Start_Date__c) - (12*(YEAR(Period_Start_Date__c)+YEAR(TODAY())))) + MONTH(TODAY())</formula>
    <label>Number of Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>