objects/Customer_Revenue__c/fields/Sales_Budget_vs_Customer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sales_Budget_vs_Customer_Revenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Budget vs Customer Revenue</label>
    <referenceTo>Sales_Budget_vs_Customer_Revenue__c</referenceTo>
    <relationshipLabel>Customer Revenue</relationshipLabel>
    <relationshipName>Customer_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>