objects/Customer_Revenue__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Customer Revenue</relationshipLabel>
    <relationshipName>Customer_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>