objects/Customer_Revenue__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Customer Revenues</relationshipLabel>
    <relationshipName>Customer_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>