objects/Customer_Revenue__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Customer Revenues</relationshipLabel>
    <relationshipName>Customer_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>