objects/Customer_Revenue__c/fields/Service_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Name__c</fullName>
    <formula>Service_Center__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Center Name</label>
    <type>Text</type>
</CustomField>