objects/Customer_Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Period_Start_Date__c</columns>
    <columns>Period_End_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Salesperson__c</columns>
    <columns>Account_Executive__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Subsidiary_Company__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>