objects/Customer_Revenue__c/listViews/Envirotech_Consultants_LLC.listView-meta.xml
<ListView>
    <fullName>Envirotech_Consultants_LLC</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Fiscal_Period__c</columns>
    <columns>Amount__c</columns>
    <columns>Salesperson__c</columns>
    <columns>Account_Executive__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Subsidiary_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary_Company__c</field>
        <operation>equals</operation>
        <value>4-ENVIROTECH CONSULTANTS LLC</value>
    </filters>
    <label>Envirotech Consultants LLC</label>
</ListView>